--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,16 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <script type='application/ld+json'>
+    {
+      "@context": "http://www.schema.org",
+      "@type": "Organization",
+      "name": "Forest City Lodge #388",
+      "url": "forestcitylodge.com"
+    }
+  </script>
 </head>
-<body class="bg-secondary-lightest">
+<body class="bg-secondary-lightest" ng-cloak>
   <app-root></app-root>
 </body>
 </html>
