--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
   <script type="text/javascript">
     if(self === top) {
       var antiClickjack = document.getElementById("antiClickjack");
-      antiClickjack.parentNode.removeChild(antiClickjack);
+      antiClickjack?.parentNode.removeChild(antiClickjack);
       } else {
       top.location = self.location;
     }
