more cleanup and bug fixes

--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
   <script type="text/javascript">
     if(self === top) {
       var antiClickjack = document.getElementById("antiClickjack");
-      antiClickjack.parentNode.removeChild(antiClickjack);
+      antiClickjack?.parentNode.removeChild(antiClickjack);
       } else {
       top.location = self.location;
     }
@@ -30,7 +30,7 @@
 <body class="bg-secondary-lightest">
   <app-root>
     <div style="text-align: center;">
-      <img src="./assets/images/gifs/disc-square-and-compasses.gif" style="width:250px; height:250px;" alt="Loading"/>
+      <img src="./assets/images/gifs/blue-bar-spinner.gif" style="width:100px; height:100px;" alt="Loading"/>
     </div>
     <div style="text-align: center;">
       <span style="font-size: x-large; font-family: 'Times New Roman', Times, serif;">Searching For The Light . . .</span>
