--- a/src/index.html
+++ b/src/index.html
@@ -30,10 +30,10 @@
 <body class="bg-secondary-lightest">
   <app-root>
     <div style="text-align: center;">
-      <img src="./assets/images/gifs/blue-bar-spinner.gif" style="width:100px; height:100px;" alt="Loading"/>
+      <img src="./assets/images/gifs/blue-bar-spinner.gif" style="width:50px; height:50px;" alt="Loading"/>
     </div>
     <div style="text-align: center;">
-      <span style="font-size: x-large; font-family: 'Times New Roman', Times, serif;">Searching For The Light . . .</span>
+      <span style="font-size: x-large; font-family: 'Times New Roman', Times, serif;">Loading . . .</span>
     </div>
   </app-root>
 </body>
