fixes and improvements

--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
   <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
   <meta content="utf-8" http-equiv="encoding">
   <title>Forest City Lodge #388</title>
-  <meta name="description" content="Cleveland's Premier Masonic Lodge - Located at the Lyndhurst Masonic Lodge - Pride in Brotherhood">
+  <meta name="description" content="Cleveland's Premier Masonic Lodge - Located at the Lyndhurst Masonic Temple - Pride in Brotherhood">
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
