added one more boolean condition
Change-Id: Ibbd8949b3a80d310749e2ecd6c2acd77483ad08d

--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
   <script type="text/javascript">
     if(self === top) {
       var antiClickjack = document.getElementById("antiClickjack");
-      if (antiClickjack.parentNode && antiClickjack.parentNode.removeChild) {
+      if (antiClickjack && antiClickjack.parentNode && antiClickjack.parentNode.removeChild) {
         antiClickjack.parentNode.removeChild(antiClickjack);
       }
     } else {
